# upc-tactics

./: README.md
Projects/triangulo y circuos/: triangulo y circuos.sln
Projects/triangulo y circuos/Debug/: triangulo y circuos.exe.metagen
Projects/triangulo y circuos/triangulo y circuos/: CCirculo.h  CControl.h  MyForm.cpp  MyForm.h  MyForm.resx  triangulo y circuos.vcxproj  triangulo y circuos.vcxproj.filters
Projects/triangulo y circuos/triangulo y circuos/Debug/: triangulo y circuos.vcxproj.GenerateResource.cache  trianguloycircuos.MyForm.resources
Projects/triangulo y circuos/triangulo y circuos/Debug/triangul.371724CF.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  triangulo y circuos.lastbuildstate  triangulo y circuos.write.1u.tlog
TA2/: CMakeLists.txt
TA2/Ejercicio 2/: Fecha.cpp  Fecha.h  Monitor.cpp  Monitor.h  Profesor.cpp  Profesor.h  main.cpp
TA2/Ejercicio 3/: Classes.cpp  Classes.h
TA2/Ejercicio1/: DEfiniciondeatributs.cpp  DEfiniciondeatributs.h
